deployment/eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-template-service
  namespace: python-template-service
  labels:
    app: python-template-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-template-service
  template:
    metadata:
      labels:
        app: python-template-service
    spec:
      containers:
        - name: python-template-service
          image: 015911812286.dkr.ecr.us-east-1.amazonaws.com/python-template-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: python-template-service-service
  namespace: python-template-service
spec:
  selector:
    app: python-template-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8000
