deployment/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-template-service-ingress
  namespace: python-template-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing ## internet-facing > public access, internet > private 
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /v1.0/healthz
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-template-service-service
                port:
                  number: 8081
